# iri_3d_navigation

bag_data_to_plot/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
bag_data_to_plot/src/: bag_data_to_plot.cpp~  bag_data_to_plot_node.cpp
iri_miriamm_exploration/: CMakeLists.txt  CMakeLists.txt~  manifest.json  package.xml  package.xml~
iri_miriamm_exploration/launch/: iri_miriamm_exploraiton.launch~  iri_miriamm_exploration.launch  iri_miriamm_exploration.launch~  iri_miriamm_exploration_exp.launch
iri_miriamm_exploration/src/: exploration.cpp
iri_miriamm_exploration/srv/: ReqNewGoal.srv  ReqNewGoal.srv~
iri_miriamm_path_follower/: CMakeLists.txt  CMakeLists.txt~  manifest.json  package.xml~
iri_miriamm_path_follower/launch/: iri_miriamm_path_follower.launch  iri_miriamm_path_follower_exp.launch~
iri_miriamm_path_follower/src/: iri_miriamm_path_follower.cpp
iri_miriamm_path_planning/: CMakeLists.txt  manifest.json  package.xml  package.xml~
iri_miriamm_path_planning/include/iri_miriamm_path_planning/: path_planning.hpp
iri_miriamm_path_planning/launch/: iri_miriamm_path_planning.launch  iri_miriamm_path_planning.launch~  iri_miriamm_path_planning_exp.launch
iri_miriamm_path_planning/src/: path_planning.cpp
iri_miriamm_sim/: CMakeLists.txt  CMakeLists.txt~  package.xml
iri_miriamm_sim/launch/: geotiff_mapper.launch  geotiff_mapper.launch~  iri_exp_controller.launch~  iri_miriamm_sim_nav.launch  iri_miriamm_sim_nav_experiment.launch  iri_miriamm_sim_nav_experiment.launch~  iri_miriamm_sim_nav_recon.launch~  (+24 more)
save_octomap/: CMakeLists.txt  CMakeLists.txt~  package.xml~
transform_gazebo_pose/: CMakeLists.txt~  manifest.json  package.xml  package.xml~
(+71 files in other folders)
